--- a/CoreFlows/Documentation/intro.dox
+++ b/CoreFlows/Documentation/intro.dox
@@ -1,10 +1,10 @@
 /*!
 
-\mainpage CDMATH-CoreFlows User Guide
+\mainpage SOLVERLAB Developer Guide
 
-\section CFlows Presentation of CDMATH-CoreFlows
+\section CFlows Presentation of SOLVERLAB
 
-CDMATH-CoreFlows is an open source C++/Python library intended at solving PDE systems
+SOLVERLAB is an open source C++/Python library intended at solving PDE systems
 arising from the thermalhydraulics of two phase flows in power plant boilers. It
 is a simple environment meant at students and researchers to test new numerical
 methods on general geometries with unstructured meshes. It is developped by
@@ -20,7 +20,7 @@ are the study of
 - New preconditioners for implicit methods for two phase flows
 - The coupling of fluid models or multiphysics coupling (eg thermal hydraulics and neutronics or thermal hydraulics and solid thermics)
 
-CDMATH-CoreFlows relies on the \ref toolbox of the project \ref cdmath for the handling of meshes and fields, and on the library \ref petsc for the handling of large sparse matrices.
+SOLVERLAB relies on the \ref toolbox of the project \ref cdmath for the handling of meshes and fields, and on the library \ref petsc for the handling of large sparse matrices.
 
 
 \section Contents
@@ -39,15 +39,15 @@ This document is the user guide of the %CoreFlows library. It is organized as fo
 - \subpage software "Software structure"
 - \subpage numericalPage "The numerical methods"
 - Summary of available \subpage functionalities  "functionalities"
-- \subpage examples "CDMATH-CoreFlows example scripts"
+- \subpage examples "SOLVERLAB example scripts"
 
 
 \section installation Installation and use
-In order to install CDMATH-CoreFlows you will need the packages \ref cmake , \ref hdf5 and possibly 
-- \ref swig and \ref numpy if you want to use CDMATH-CoreFlows in python scripts 
+In order to install SOLVERLAB you will need the packages \ref cmake , \ref hdf5 and possibly 
+- \ref swig and \ref numpy if you want to use SOLVERLAB in python scripts 
 - \ref doxygen if you want to generate this html documentation.
 
-Instructions for installation and use of CDMATH-CoreFlows can be found here \subpage install "Installation and use of CDMATH-CoreFlows".
+Instructions for installation and use of SOLVERLAB can be found here \subpage install "Installation and use of SOLVERLAB".
 
 \section References 
 
