--- a/CoreFlows/Documentation/intro-user-guide.dox
+++ b/CoreFlows/Documentation/intro-user-guide.dox
@@ -1,6 +1,6 @@
 /*!
 
-\mainpage SOLVERLAB Developer Guide
+\mainpage SOLVERLAB User Guide
 
 \section CFlows Presentation of SOLVERLAB
 
@@ -22,7 +22,7 @@ The main research objectives of SOLVERLAB are the study of
 
 
 \section Contents
-This document is the developer guide of the SOLVERLAB library. It is organised as follows :
+This document is the user guide of the SOLVERLAB library. It is organised as follows :
 
 - \subpage physicalmodels "The Physical Models" 
 	+ \subpage ScalarModelsPage "The linear scalar problems" 
@@ -38,6 +38,28 @@ This document is the developer guide of the SOLVERLAB library. It is organised a
 - \subpage numericalPage "The numerical methods"
 - Summary of available \subpage functionalities  "functionalities"
 - \subpage examples "SOLVERLAB example scripts"
+
+Examples of use
+---------------
+- [Examples of stable numerical methods for the 1D linear transport equation](CDMATH/tests/doc/1DTransportEquation/RegularGrid/TransportEquation1D_RegularGrid.html)
+- [Shock formation and numerical capture issues for the 1D Burgers' equations](CDMATH/tests/doc/1DBurgersEquation_ShockWave/BurgersEquation1D.html)
+- [Influence of the mesh on the convergence and low Mach precision for the UPWIND finite volume method applied to the 2D wave system](CDMATH/tests/doc/2DWaveSystemVF_stationary/Convergence_WaveSystem_Upwind_SQUARE.html)
+- [Influence of the mesh on the convergence and low Mach precision  for the CENTERED finite volume method applied to the 2D wave system](CDMATH/tests/doc/2DWaveSystemVF_stationary/Convergence_WaveSystem_Centered_SQUARE.html)
+- [Influence of the mesh on the convergence and low Mach precision  for the STAGGERED finite volume method applied to the 2D wave system](CDMATH/tests/doc/2DWaveSystemVF_stationary/Convergence_WaveSystem_Staggered_SQUARE_squares.html)
+- [Influence of the mesh on the convergence and low Mach precision  for the PSEUDO-STAGGERED (colocated) finite volume method applied to the 2D wave system](CDMATH/tests/doc/2DWaveSystemVF_stationary/Convergence_WaveSystem_PStag_SQUARE.html)
+- [Finite elements for the Poisson problem on a cube in 3D (by S. Kameni Ngwamou, PhD student)](CDMATH/tests/doc/3DPoissonEF/FiniteElements3DPoisson_CUBE.html)
+- [Finite elements for the stationary diffusion of the temperature in a 3D room. Influence of the radiator position (by S. Kameni Ngwamou, PhD student)](CDMATH/tests/doc/3DRoomCoolingEF/3DRoomCoolingEF.html)
+- [Surface Finite elements for the Poisson-Beltrami problem on a sphere in 3D (by M. Nguemfouo, PhD student)](CDMATH/tests/doc/3DPoissonSphereEF/SynthesisConvergenceFESphere.pdf)
+- [Surface Finite elements for the Poisson-Beltrami problem on a torus in 3D (by M. Nguemfouo, PhD student)](CDMATH/tests/doc/3DPoissonTorusEF/SynthesisConvergenceFETorus.pdf)
+
+\section runSolverlab Run SOLVERLAB from SALOME
+
+The easiest way to run SOLVERLAB is to download the SALOME binary file corresponding to your operating system [here](https://www.salome-platform.org/?page_id=15). After downloading the appropriate tar.gz archive, untar it in a folder mySALOME and run the file 'mySALOME/salome' in a terminal ro launch SALOME. In the SALOME windows, click on the SOLVERLAB icon or use the python shell to run SOLVERLAB.
+
+\section installation Standalone compilation from sources
+In order to build SOLVERLAB on your system you will need the package [CMAKE](https://cmake.org/) , a C++  compiler such as  [g++](https://gcc.gnu.org/) and optionally [python3](https://www.python.org/downloads/) to run python language scripts and [ParaView](https://www.paraview.org/) for data visualisation.  
+
+Detailed instructions for compilation and use of SOLVERLAB can be found here \subpage install "Standalone compilation of SOLVERLAB from sources".
 
 
 \section SolverlabInTerminal Use of SOLVERLAB in a terminal
@@ -66,14 +88,5 @@ The SOLVERLAB environment variables consist in :
  * PETSc, SLEPc and HDF5 library path: `${PETSC_DIR}/${PETSC_ARCH}/lib`
  * MED library path: `${MEDFILE_ROOT_DIR}/lib`
  * MEDCOUPLING library path: `${MEDCOUPLING_ROOT_DIR}/lib`
-
-\section SolverlabGUI New SOLVERLAB GUI
-
-A new GUI based on the library [PACKAGESPYGUI](https://github.com/ndjinga/PACKAGESPYGUI) is being developped for SOLVERLAB. In order to use the new GUI use the cmake option `-DSOLVERLAB_WITH_PACKAGESPY=ON` that will download the library [PACKAGESPYGUI](https://github.com/ndjinga/PACKAGESPYGUI) from github.
-If you have a local copy of the library PACKAGESPY, give the to solverlab using the cmake option `-DPACKAGESPY_ROOT_DIR=${PACKAGESPY_ROOT_DIR}`.
-
-\section References 
-
-\subpage references "A specific page dedicated to references is available here".
 
 */
