--- a/CoreFlows/Documentation/intro-dev-guide.dox
+++ b/CoreFlows/Documentation/intro-dev-guide.dox
@@ -1,14 +1,15 @@
 /*!
 
-\mainpage SOLVERLAB Developer Guide
+\mainpage SOLVERLAB developer guide
 
 \section CFlows Presentation of SOLVERLAB
 
-OLVERLAB is a geometrical and numerical C++/Python library designed for numerical analysts who work on the discretisation of partial differential equations on general shapes and meshes and would rather focus on high-level scripting. The goal is to provide simple MATLAB style functions for the generation and manipulation of meshes, fields and matrices. The library is based on the [MEDcoupling](https://docs.salome-platform.org/latest/dev/MEDCoupling/tutorial/index.html) C++/python library of the [SALOME](http://www.salome-platform.org/) project for the handling of meshes and fields, and on the C++ library [PETSC](https://www.mcs.anl.gov/petsc/) for the handling of matrices and linear solvers. 
+SOLVERLAB is a geometrical and numerical C++/Python library designed for numerical analysts who work on the discretisation of partial differential equations on general shapes and meshes and would rather focus on high-level scripting. The goal is to provide simple MATLAB style functions for the generation and manipulation of meshes, fields and matrices. The library is based on the [MEDcoupling](https://docs.salome-platform.org/latest/dev/MEDCoupling/tutorial/index.html) C++/python library of the [SALOME](http://www.salome-platform.org/) project for the handling of meshes and fields, and on the C++ library [PETSC](https://petsc.org/release/) for the handling of matrices and linear solvers. 
 
 SOLVERLAB includes PDE systems
 arising from the modeling of nuclear reactor cores which involves fluid dynamics, heat and neutron diffusion as well as solid elasticity. It
 is a simple environment meant at students and researchers for teachind and promote new numerical
+
 methods on general geometries with unstructured meshes.  
 The main research objectives of SOLVERLAB are the study of
 
@@ -40,32 +41,49 @@ This document is the developer guide of the SOLVERLAB library. It is organised a
 - \subpage examples "SOLVERLAB example scripts"
 
 
-\section SolverlabInTerminal Use of SOLVERLAB in a terminal
+\section installation Standalone compilation from sources
+However the SALOME binary file can be very large (up to 5GB). Compilation of SOLVERLAB from source files can provide a faster alternative using less disk and memory space.
 
-**Running Python scripts**
+In order to build SOLVERLAB on your system you will need
+- the package [CMAKE](https://cmake.org/),
+- a C++  compiler such as  [g++](https://gcc.gnu.org/) 
+- optionally [Python3](https://www.python.org/downloads/) to run python language scripts 
+- optionally [ParaView](https://www.paraview.org/) for data visualisation.  
+
+Detailed instructions for compilation and use of standalone SOLVERLAB can be found here \subpage install "Standalone compilation of SOLVERLAB from sources".
+
+
+\section SolverlabInTerminal Use SOLVERLAB in a terminal
+
+<b>Running Python scripts</b>
+
 If you are not in a SALOME console you first need to load the SOLVERLAB environment in your terminal using the command
- * source `/path/to//SOLVERLAB_install/env_SOLVERLAB.sh`
+ - \verbatim source /path/to//SOLVERLAB_install/env_SOLVERLAB.sh\endverbatim
 To run SOLVERLAB with your Python code `main.py `, simply type in your terminal or your SALOME console
-- `python3 main.py `
+ - \verbatim python3 main.py \endverbatim
 
-**Launching SOLVERLAB graphic interface from a terminal**
+<b>Launching SOLVERLAB graphic interface from a terminal</b>
+
 If you are not in a SALOME console you first need to load the SOLVERLAB environment in your terminal using the command
- * source `/path/to//SOLVERLAB_install/env_SOLVERLAB.sh`
+ - \verbatim source /path/to//SOLVERLAB_install/env_SOLVERLAB.sh\endverbatim
 Then to use the Graphical User Interface of SOLVERLAB, simply type in your terminal
-- `python3 $SOLVERLABGUI -g`
+ - \verbatim python3 $SOLVERLABGUI -g\endverbatim
 
-**Running C++ scripts**
+<b>Running C++ scripts</b>
+
 If performance or parallelism is an issue for your simulations, you can use SOLVERLAB librairies with your C++ code :
- * C++ libraries: `export LD_LIBRARY_PATH=/path/to/SOLVERLAB_install/lib`
- * To know how to include the right libraries for compilation, see the makefiles of the examples. They include the list ` -lmedC -lmedloader -lmedcoupling -lbase -lmesh -llinearsolver` plus mpi if you are using a parallel version of SOLVERLAB.
+ - C++ libraries: \verbatim export LD_LIBRARY_PATH=/path/to/SOLVERLAB_install/lib\endverbatim
+ - To know how to include the right libraries for compilation, see the makefiles of the examples. They include the list 
+  \verbatim -lmedC -lmedloader -lmedcoupling -lbase -lmesh -llinearsolver\endverbatim plus \em -lmpi if you are using a parallel version of SOLVERLAB.
 
-**SOLVERLAB environment variables**
+<b>SOLVERLAB environment variables</b>
+
 The SOLVERLAB environment variables consist in :
- * SOLVERLAB C++ library path: `/path/to/SOLVERLAB_install/lib`
- * SOLVERLAB Python library paths: `/path/to/SOLVERLAB_install/lib/SOLVERLAB:/path/to/SOLVERLAB_install/bin/SOLVERLAB`
- * PETSc, SLEPc and HDF5 library path: `${PETSC_DIR}/${PETSC_ARCH}/lib`
- * MED library path: `${MEDFILE_ROOT_DIR}/lib`
- * MEDCOUPLING library path: `${MEDCOUPLING_ROOT_DIR}/lib`
+ - SOLVERLAB C++ library path: `/path/to/SOLVERLAB_install/lib`
+ - SOLVERLAB Python library paths: `/path/to/SOLVERLAB_install/lib/SOLVERLAB:/path/to/SOLVERLAB_install/bin/SOLVERLAB`
+ - PETSc, SLEPc and HDF5 library path: `${PETSC_DIR}/${PETSC_ARCH}/lib`
+ - MED library path: `${MEDFILE_ROOT_DIR}/lib`
+ - MEDCOUPLING library path: `${MEDCOUPLING_ROOT_DIR}/lib`
 
 \section SolverlabGUI New SOLVERLAB GUI
 
